css/spni.css
/* ... */
/* Gallery / Start / Tag button elements: */

.centered-icon-button {
    display: flex;
    justify-content: center;
    align-items: center;
}

.centered-icon-image {
    width: 56%;
    height: auto;
}

.centered-icon-glyphicon {
    width: 2em;
    height: auto;
    font-size: 1.25em;
}

.title-start-edge {
    width: 18rem;
    font-size: 200%;
    padding: 0.25rem;
    background: linear-gradient(#222222, #111111);
}

.title-start-button {
    width: 100%;
}

.title-entrance-image {
    margin-left: 0.7rem;
    margin-top: 0.6rem;
    margin-right: 0.2rem;
    width: 88.5%;
}

.title-gallery-edge {
    width: 20%;
    height: 80%;

    font-size: 200%;
    padding: 0.1rem;
    background: linear-gradient(#222222, #111111);

    margin-right: 6.25%;
}

.title-gallery-button {
    width: 100%;
    height: 100%;
}

.title-tags-edge {
    width: 20%;
    height: 80%;

    font-size: 200%;
    padding: 0.1rem;
    background: linear-gradient(#222222, #111111);

    margin-left: 6.25%;
}

.title-tags-button {
    width: 100%;
    height: 100%;
    font-size: 100%;
}

.version-label {
    width: 15rem;
    background: radial-gradient(#DDDDDD, #AAAAAA);
    background-color: #AAAAAA;
    text-align: center;
    font-size: 1.6rem;
    margin: 0.5rem auto;
    padding: 0.2rem 0.5rem;
}

.title-credit-button {
    display: block;
    width: 15rem;
    height: 2.8rem;
    font-size: 1.6rem;
    margin: 0 auto;
}

.title-next-button {
    display: block;
    width: 8rem;
    font-size: 2.2rem;
    height: 4rem;
    margin: 0 auto;
    padding: 0.5rem 1rem 0.5rem 1rem;
}

.banner-flair {
    text-align: center;
    font-size: 120%;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    top: 17%;
    position: absolute;
    padding-top: 0.5%;
    height: 5.5%;
    width: 4%;
}

.title-settings-button {
    width: 6%;
    height: 7%;
    left: 1%;
}

.title-settings-button>span {
    font-size: 1.75em;
}

.title-bug-report-button {
    left: 7.5%;
}

.reddit-button {
    left: 12.0%;
}

.reddit-logo {
    width: 100%;
    height: 100%;
}

.title-load-button {
    left: 16.5%;
}

.title-fullscreen-button {
    left: 21.0%;
}

.version-button {
    width: 16.5%;
    right: 17%;
    padding-top: 0.35em;
    line-height: 85%;
}

.version-button>.substitute-version-time {
    font-size: 75%;
    white-space: nowrap;
}

.title-help-button {
    width: 15.5%;
    height: 6.5%;
    right: 1%;

    font-size: 150%;

    background: linear-gradient(#f34141, #9F1616);
    background-color: #f34141;
}

.title-help-button:hover {
    background: linear-gradient(#F88888, #BB3333);

    background-color: #F66666;
}

#left-title-candy {
    left: 0;
}

#right-title-candy {
    right: 0;
}

.title-candy {
    position: absolute;
    bottom: 0;
    height: 80%;
}

/************************************************************
 * Classes for the main select screen.
 ************************************************************/

.main-select-area {
    position: absolute;
    width: 90%;
    height: 12%;
    left: 5%;
    bottom: 3%;
    background-color: #282828;
}

.main-select-button {
    position: absolute;
    width: 9.5%;
    height: 94%;
    font-size: 140%;
    bottom: 3%;
}

.select-random-container {
    position: absolute;
    height: 94%;
    bottom: 3%;
    right: 11.5%;
    width: 30%;
}

.select-random-col {
    width: 49%;

    height: 100%;

    display: inline-flex;
    flex-direction: column;
}

.select-random-col:first-child {
    padding-right: 2%;
}

.select-quadrant-button {
    width: 100%;
    height: 49%;
    white-space: nowrap;
}

.select-quadrant-button:first-child {
    margin-bottom: 2%;
}

#main-select-button {
    position: absolute;
    height: 120%;
    width: 14%;
    right: 43%;
    bottom: -10%;
    font-size: 180%;
    text-align: center;
}

#main-select-button:disabled {
    background: linear-gradient(#AAAAAA, #888888);
    background-color: #AAAAAA;
}

#select-advance-top {
    position: absolute;
    width: 16%;
    height: 16%;
    top: -16%;
    left: 42%;
    border-bottom: none;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    background-color: #282828;
}

#select-advance-bottom {
    position: absolute;
    width: 16%;
    height: 16%;
    bottom: -16%;
    left: 42%;
    border-top: none;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    background-color: #282828;
}

.select-back-button {
    left: 0.5%;
}

#select-group-button {
    left: 22%;
}

#select-group-testing-button {
    left: 12%;
}

#select-help-button {
    left: 32%;
}

#select-remove-all-button {
    right: 0.5%;
}

#individual-search-button,
#group-search-button {
    left: 22%;
}

#group-switch-testing-button {
    left: 12%;
}

#individual-basic-info-button,
#group-basic-info-button {
    right: 22%;
}

#individual-credits-button,
#group-credits-button {
    right: 12%;
}

#individual-more-info-button,
#group-more-info-button {
    right: 2%;
}

.opponent-suggestion-container {
    position: absolute;
    width: 100%;
    height: 80%;
    margin: auto;
    top: -19%;
    left: 0;
    right: 0;
}

.opponent-suggestion-header {
    position: absolute;
    left: 0.5%;
    top: -5%;
    height: 5.5%;
    width: 99%;
    background-color: #F5F5F5;
    text-align: center;
}

.opponent-suggestion-row {
    width: 100%;
    height: 50%;
}

.opponent-suggestion-cell {
    float: left;
    width: 50%;
    height: 100%;
    margin: 0;
}

.opponent-suggestion-image {
    display: block;
    margin: 0 auto;
    width: auto;
    height: 100%;
    opacity: 0.6;

}

.opponent-suggestion-label {
    display: block;
    position: relative;
    bottom: 25%;
    text-align: center;
    background-color: #F5F5F5;
    height: 11%;
    left: 1%;
    width: 98%;
}

.select-slot-button {
    width: 100%;
    height: 5.44rem;
    /* To match small-card-image */
    font-size: 130%;
}

.select-slot-button.suggestion-shown {
    height: 4.5rem;
}
/* ... */

